Fix invalid min contrasts.

--- a/src/css/imports/_root_and_colors.scss
+++ b/src/css/imports/_root_and_colors.scss
@@ -5,9 +5,9 @@ $blue-pastel-sky-grayer:  #b3cdd4;
 
 $blue-aqua: #70dcff;
 $blue-night: #2a7fca;
-$blue-ocean:  #42afce;
-$blue-ocean-deep:  #1b91af;
-$blue-ocean-deeper:  #17809b;
+$blue-ocean:  #267C9F;
+$blue-ocean-deep: #186e8f;
+$blue-ocean-deeper: #0c4c67;
 
 $black: #1D2D35;
 
